--- a/public/css/admin/ofd.css
+++ b/public/css/admin/ofd.css
@@ -27,3 +27,7 @@
       border-radius: 10px;
       margin-bottom: 30px;
     }
+body.modal-open {
+    overflow-y: auto !important;
+    padding-right: 0 !important;
+  }
