--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -51,7 +51,7 @@
           { title: "Out For Delivery", value: outForDeliveryCount, class: "secondary", link: "/admin/ofd" },
           { title: "Total Buyers", value: buyerCount, class: "info", link: "/admin/buyers" },
           { title: "Total Sellers", value: sellerCount, class: "dark", link: "/admin/sellers" },
-          { title: "Total seller advance", value: `₹${totalOrderValue}`, class: "danger", link: "/admin/payments" },
+          { title: "Total seller Due", value: `₹${totalOrderValue}`, class: "danger", link: "/admin/payments" },
           { title: "Total Dues", value: `₹${totalDue}`, class: "danger", link: "/admin/dues" }
         ]; %>
 
