--- a/public/css/admin/sellerdeals.css
+++ b/public/css/admin/sellerdeals.css
@@ -15,3 +15,22 @@
       padding: 10px;
       border-radius: 10px;
     }
+    .product-card .card-img-top {
+  height: 180px;
+  object-fit: cover;
+}
+.product-card .card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.product-card .card-body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.product-card{
+  margin-bottom: 24px;
+}
